@startuml Training Management System - Class Diagram

skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

class User {
    -id: Long
    -username: String
    -firstName: String
    -lastName: String
    -email: String
    -phone: String
    -password: String
    -birthDate: Date
    -role: String
    -createdAt: Timestamp
    -updatedAt: Timestamp
}

class TrainingProgram {
    -id: Long
    -title: String
    -description: String
    -createdBy: User
    -status: String
    -startDate: Date
    -endDate: Date
    -createdAt: Timestamp
    -updatedAt: Timestamp
}

class Course {
    -id: Long
    -trainingProgram: TrainingProgram
    -title: String
    -description: String
    -category: String
    -duration: Integer
    -price: BigDecimal
    -assignedTrainer: User
    -status: String
    -createdAt: Timestamp
    -updatedAt: Timestamp
}

class Session {
    -id: Long
    -course: Course
    -title: String
    -notes: String
    -scheduledDatetime: Timestamp
    -duration: Integer
    -location: String
    -status: String
    -createdAt: Timestamp
    -updatedAt: Timestamp
}

class Material {
    -id: Long
    -session: Session
    -title: String
    -description: String
    -filePath: String
    -fileType: String
    -uploadedBy: User
    -uploadedAt: Timestamp
    -createdAt: Timestamp
    -updatedAt: Timestamp
}

class Enrollment {
    -id: Long
    -trainee: User
    -trainingProgram: TrainingProgram
    -enrollmentDate: Date
    -status: String
    -completionDate: Date
    -createdAt: Timestamp
    -updatedAt: Timestamp
}

class Attendance {
    -id: Long
    -session: Session
    -trainee: User
    -attended: Boolean
    -checkInTime: Timestamp
    -checkOutTime: Timestamp
    -notes: String
    -createdAt: Timestamp
    -updatedAt: Timestamp
}

class Assessment {
    -id: Long
    -course: Course
    -title: String
    -description: String
    -totalMarks: Integer
    -passingMarks: Integer
    -dueDate: Timestamp
    -createdBy: User
    -createdAt: Timestamp
    -updatedAt: Timestamp
}

class AssessmentResult {
    -id: Long
    -assessment: Assessment
    -trainee: User
    -marksObtained: Integer
    -submittedAt: Timestamp
    -gradedBy: User
    -feedback: String
    -createdAt: Timestamp
    -updatedAt: Timestamp
}

' Relationships
User "1" -- "*" TrainingProgram : creates
User "1" -- "*" Course : trains
User "1" -- "*" Enrollment : enrolls
User "1" -- "*" Material : uploads
User "1" -- "*" Assessment : creates
User "1" -- "*" AssessmentResult : grades

TrainingProgram "1" -- "*" Course
Course "1" -- "*" Session
Session "1" -- "*" Material
Session "1" -- "*" Attendance
Course "1" -- "*" Assessment
Assessment "1" -- "*" AssessmentResult
TrainingProgram "1" -- "*" Enrollment

@enduml 